# masters-project

./: .gitignore  LICENSE.md  README.md  config.yml  create_dataset_tracking.py  dataset_tracking.xlsx  experiment_manager.py  experiment_tracking.xlsx  main.py  pyproject.toml  pytest.ini  requirements.txt  run_data_generator.py  run_experiment_tracking.py  run_experiments.py  run_generator.py  run_hyperparameter_tuning.py  run_multi_seed_generation.py  run_multi_seed_training.py  run_training.py  run_tuning_analysis.py  run_update_dataset_tracking_spreadsheet.py  test.py  ~$dataset_tracking.xlsx
archive/: run_data_generator.py  run_experiment_tracking.py  run_experiments.py  run_hyperparameter_tuning.py  run_multi_seed_perturbation.py  run_results_aggregator.py  run_tuning_analysis.py  run_update_dataset_tracking.py
configs/: experiments.yml  n100000_f_init5_cont0_disc5_config.yml  n100000_f_init5_cont0_disc5_func-feature-based-classification_ratio0p5_config.yml  n100000_f_init5_cont0_disc5_sep11p6_config.yml  training-config-001.yml
data/: dataset.csv  n1000_f_init5_add2_pert-gaussian_scl0p15_func-polynomial_dataset.csv
db/: n1000_f_init5_cont0_disc5_sep5p1_training_mlp_001_tuning.db-journal
notebooks/: V1_generating_toy_data.ipynb
reports/: experiment_tracking.xlsx  experiment_tracking_master.xlsx
scripts/: config_helpers.py  generate_combined_independent.py  generate_combined_scales.py  generate_combined_shifts.py  generate_correlated_scales.py  generate_correlated_shifts.py  generate_independent_scales.py  generate_independent_shifts.py
src/: main.py  (+1 more)
(+2887 files in other folders)
