[project]
name = "masters-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
